@@ -13,11 +13,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 
-import org.apache.commons.lang.StringUtils;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.dpr.mykeys.app.utils.KeyUsages;
 import org.dpr.mykeys.app.certificate.MkCertificate;
-import org.dpr.mykeys.app.KeyUsages;
 import org.dpr.mykeys.app.certificate.Certificate;
 
 
@@ -25,7 +25,7 @@ public class ProfileServices
 
 {
     //TODO: manage CAs from PKI store too
-    public static final Log log = LogFactory.getLog(ProfileServices.class);
+    public static final Logger log = LogManager.getLogger(ProfileServices.class);
     private final static String PROFIL_EXTENSION = ".mkprof";
     private final String profilPath;
 
@@ -42,7 +42,7 @@ public class ProfileServices
         }
         try (FileInputStream fis = new FileInputStream(f)) {
             Properties p = new Properties();
-            p.load(new FileInputStream(f));
+            p.load(fis);
             return p;
         } catch (Exception e) {
             throw new ProfilException("Erreur chargement profil", e);
@@ -56,9 +56,9 @@ public class ProfileServices
         try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(Paths.get(cfgPath))) {
             for (Path path : directoryStream) {
                 profs.add(new CertificateTemplate(path));
-
             }
         } catch (IOException ex) {
+            log.error("can't load profile file",ex);
         }
 
         return profs;
@@ -67,7 +67,7 @@ public class ProfileServices
 
     public void saveToFile(Map<String, Object> elements, String name, Certificate certInfo, boolean isEditing)
             throws ProfilException, IOException {
-        if (StringUtils.isBlank(name)) {
+        if (null == name || name.isBlank()) {
             throw new ProfilException("nom obligatoire");
         }
         File profDir = new File(profilPath);
@@ -76,7 +76,7 @@ public class ProfileServices
         }
         File f = new File(profDir, name + PROFIL_EXTENSION);
         if (f.exists() && !isEditing) {
-            throw new ProfilException("Le profil existe d�j�");
+            throw new ProfilException("Profile already exists !");
         }
         Properties p = new Properties();
         for (Map.Entry<String, Object> entry : elements.entrySet()) {
@@ -87,8 +87,9 @@ public class ProfileServices
         p.setProperty("&keyUsage", String.valueOf(KeyUsages.toInt(certInfo.getKeyUsage())));
         //noinspection ImplicitArrayToString
         p.setProperty("&keyUsage2", String.valueOf(certInfo.getKeyUsage()));
-        p.store(new FileOutputStream(f), "");
-
+        try(FileOutputStream fos=new FileOutputStream(f)){
+            p.store(fos, "");
+        }
     }
 
     public String[] getProfiles() {
